--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
+								<h1>Konstantinos Kyriacou</h1>
 								<p> A summary of my abilities and a description of my person.</p>
 							</div>
 						</div>
