--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<nav>
 							<ul>
 								<li><a href="#About Me">About Me</a></li>
-								<li><a href="#University">Module Assignments</a></li>
+								<li><a href="#University">University</a></li>
 								<li><a href="#My Abilities and Skills">Abilities and Skills</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -56,7 +56,7 @@
 
 						<!-- University -->
 							<article id="University">
-								<h2 class="major">Module Assingments</h2>
+								<h2 class="major">University</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								
 								
