--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
 						<!-- About Me -->
 							<article id="About Me">
 								<h2 class="major">About Me</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p> My name is Constandinos Kyriacou. I describe myself as an inquisitive and ambitious mathematician and statistician. <p/>
+								<span class="image main"><img src="images/pic01.jpg" alt="<p> My name is Constandinos Kyriacou. I describe myself as an inquisitive and ambitious mathematician and statistician. <p/>
 								<p>Furthermore, I look forward to divulging myself into a world of knowledge , involving data science and into the broader computing world,as I am currently seeking to complete my graduate degree in data science.<p/>
 								<p>Lastly, I look forward to securing a position as a data scientist in the current market.</p>
 								<p> I posess an udegraduate degree from the University of Cyprus, Mathematics and Statistics (Sep 2017 - Jun 2021) </p>
 								<p>Additionally, I am currently pursuing a graduate degree at University of Essex Online, in the Data Science field. </p>
+				 /></span>
+								
 				
 							</article>
 
