--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 						<!-- University -->
 							<article id="University">
-								<h2 class="major">University</h2>
+								<h2 class="major">Module Assignments</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								
 								
