--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<ul>
 								<li><a href="#About Me">About Me</a></li>
 								<li><a href="#University">University</a></li>
-								<li><a href="#My Abilities and Skills">Abilities and Skills</a></li>
+								<li><a href="#My Abilities">My Abilities</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -49,7 +49,7 @@
 								<p>Furthermore, I look forward to divulging myself into a world of knowledge , involving data science and into the broader computing world,as I am currently seeking to complete my graduate degree in data science.<p/>
 								<p>Lastly, I look forward to securing a position as a data scientist in the current market.</p>
 								<p> I posess an udegraduate degree from the University of Cyprus, Mathematics and Statistics (Sep 2017 - Jun 2021) </p>
-								<p>Additionally, I am currently pursuing a graduate degree at University of Essex Online, in the Data Science field. </p>
+								<p>Additionally, I am currently pursuing a graduate degree at University of Essex Online, in the Data Science field. </p>"
 				 /></span>
 								
 				
