--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 								
 							</article>
 
-						<!-- My Abilities and Skills -->
-							<article id="My Abilities and Skills">
+						<!-- My Abilities -->
+							<article id="My Abilities">
 								<h2 class="major">My Abilities and Skills</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p><h2 class="major"> Soft and Hard Skills</h2>
