--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 						<!-- My Abilities -->
 							<article id="My Abilities">
-								<h2 class="major">My Abilities and Skills</h2>
+								<h2 class="major">My Abilities</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p><h2 class="major"> Soft and Hard Skills</h2>
 									<p>Problem Solving (Expert)</p>
