--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
 						<!-- My Abilities -->
 							<article id="My Abilities">
 								<h2 class="major">My Abilities</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p><h2 class="major"> Soft and Hard Skills</h2>
+								<span class="image main"><img src="images/pic03.jpg" alt="<p><h3 class="major"> Soft and Hard Skills</h3>
 									<p>Problem Solving (Expert)</p>
 									<p>Critical Thinking (Expert)</p>
 									<p>Creative Thinking (Advanced)</p>
@@ -82,7 +81,8 @@
 									<p>Advanced Knowledge of the R programming language</p>
 									<p>Advanced Knowledge of the Python programming language</p>
 									<p>Beginner Knowledge of the SQL programming language</p>
-
+" /></span>
+								
 							</article>
 
 						<!-- Contact -->
