--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 								<span class="image main"><img src="images/pic03.jpg" alt="<p><h3 class="major"> Soft and Hard Skills</h3>
 									<p>Problem Solving (Expert)
 									Critical Thinking (Expert)
-									Creative Thinking (Advanced)</p>
+									Creative Thinking (Advanced)
 									Interpersonal Skills (Advanced)
 									Analytical Thinking (Expert)
-								--------------------------------------
+								-------------------------------------------------------------------------
 									Advanced Knowledge of Applied Mathematics & Statistics</p>
 									Advanced Knowledge Regarding Data Handling and Data Modelling</p>
 									
